# pile-plan-studio

./: .gitignore  Andere_lagen.py  Cargo.toml  Classes.py  Datamap.py  ImportRFEM.py  LICENSE  Paalkosten.py  Paalopties.py  Palenplanvenster.py  Palenvenster.py  README.md  RELEASE_NOTES.md  Sonderingenselectie.py  Sonderingsvenster.py  TODO.txt  tmpsdr0id8i  tmptui2v3ro
.github/workflows/: live.yml  release.yml
apps/pile-plan-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/pile-plan-studio/src-tauri/capabilities/: default.json
apps/pile-plan-studio/src-tauri/src/: main.rs
crates/pile-plan-core/: Cargo.toml
crates/pile-plan-core/src/: analysis.rs  export.rs  ifcpp.rs  import.rs  lib.rs  model.rs  pile_options.rs  pile_plan_import.rs  project.rs
crates/pile-plan-core/src/import/: pipeline.rs  profile.rs  refresh.rs  rfem.rs  roles.rs  table.rs
crates/pile-plan-wasm/: Cargo.toml
crates/pile-plan-wasm/src/: lib.rs
docs/: alpha-design.md  architecture.md  deployment.md  known-limitations.md  openaec-product-page.md  openaec-styling-spec.md  v2-direction.md  v2-richting.md
legacy/: Colormap.py  Eerste_laag.py  ImportRFEM.py  Paalopties.py  Palenplanroutine.py  Palenplanvenster.py  Projectmap.py  requirements.txt
sample_data/: Belastinglocaties.csv  Configuraties.xlsx  Draagvermogens.xlsx  Sonderingen.xlsx
sample_project/: Export RFEM.xlsx  Paalkosten.xlsx  Sonderingsinstellingen.xlsx  Vergrendeld.xlsx  bearing_capacities.json  cpts.json  load_points.json  pile_cost_settings.json  sample_project.ifcpp
tests/: test_datamap.py  test_paalopties.py  test_projectmap.py
tools/: allow_wasm_package.mjs  convert_sample_project_data_to_json.py
(+265 files in other folders)
