[package]
name = "pile-plan-core"
version = "0.1.3"
edition = "2021"
license = "LGPL-3.0-or-later"

[lib]
name = "pile_plan_core"
path = "src/lib.rs"

[dependencies]
calamine = "0.31"
csv = "1"
rust_xlsxwriter = { version = "0.96", features = ["wasm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
